--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
   <div class="game">
-    <div class="stats"></div>
+    <div class="stats">
+      <span class="stat">XP: <strong><span id="xpText">0</span></strong></span>
+    </div>
   </div>
 </body>
 </html>
