--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <div class="game">
     <div class="stats">
       <span class="stat">XP: <strong><span id="xpText">0</span></strong></span>
+      <span class="stat">Health: <strong><span id="healthText">100</span></strong></span>
     </div>
   </div>
 </body>
