--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       <span class="stat">Health: <strong><span id="healthText">100</span></strong></span>
       <span class="stat">Gold: <strong><span id="goldText">50</span></strong></span>
     </div>
+    <div class="controls">
+
+    </div>
   </div>
 </body>
 </html>
