--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <span class="stat">Gold: <strong><span id="goldText">50</span></strong></span>
     </div>
     <div class="controls">
-
+      <button id="button1">Go to store</button>
     </div>
   </div>
 </body>
