--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </div>
     <div class="controls">
       <button id="button1">Go to store</button>
+      <button id="button2">Go to cave</button>
     </div>
   </div>
 </body>
