--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
       <button id="button2">Go to cave</button>
       <button id="button3">Fight dragon</button>
     </div>
+    <div class="monsterStats">
+      
+    </div>
   </div>
 </body>
 </html>
