--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <button id="button3">Fight dragon</button>
     </div>
     <div class="monsterStats">
-      
+      <span class="stat">Monster Name: <strong><span id="monsterName"></span></strong></span>
     </div>
   </div>
 </body>
