--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     </div>
     <div class="monsterStats">
       <span class="stat">Monster Name: <strong><span id="monsterName"></span></strong></span>
+      <span class="stat">Health: <strong><span id="monsterHealth"></span></strong></span>
     </div>
   </div>
 </body>
